objects/ssot__SearchableReferenceDocument__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContentDocumentId__c</fullName>
        <label>Content Document</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Searchable Reference Document Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndexStatusReasonText__c</fullName>
        <label>Index Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndexStatus__c</fullName>
        <label>Index Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingYear__c</fullName>
        <label>Reporting Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1733408342392_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SearchableReferenceDocument_ContentD_rel</label>
        <referenceTo>ssot__ContentDocument__dlm</referenceTo>
        <relationshipLabel>SearchableReferenceDocument_ContentD_rel</relationshipLabel>
        <relationshipName>rel_1733408342392_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>